[package]
name = "is-wasm"
version = "0.1.0"
edition = "2021"
default-run = "is-wasm"
categories = ['wasm']
build = "build.rs"
license = "MIT"
repository = "http://github.com/clpi/is-lab"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "is-wasm"
path = "src/bin/main.rs"

[lib]
name = "is_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1.0.52"
wasm-bindgen-futures = { version = "0.4.28", optional = true }

[dependencies.wasm_bindgen]
version = "0.2.78"
optional = true

[dependencies.js-sys]
version = "0.3.55"
optional = true

[test-dependencies]
criterion = "0.3.5"

[profile.release]
lto = "fat"         # turn on Link-Time Optimizations
codegen-units = 1   # trade compile time with maximum optimization
opt-level = "z"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
